# oxidice

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md
benches/: parser_benchmark.rs
src/: compiler.rs  example.rs  fold_binary.rs  grammar.pest  grammar.rs  lib.rs  lower.rs  main.rs  preprocessor.rs  render_result.rs  runtime.rs  runtime_engine.rs  typecheck.rs
src/optimizer/: constant_fold.rs  fold_binary_op.rs  mod.rs
src/types/: eval_graph.rs  expr.rs  hir.rs  hir_fmt.rs  hir_rewriter.rs  mod.rs  output_node.rs  runtime.rs  runtime_value.rs
tests/: grammar.rs  parse_dice_and_show.rs  typecheck.rs
