[package]
name = "oxidice"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.106"
tsify = {version = "0.5.6", features = ["js"] }
winnow = "0.7.14"
rand = "0.9.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = "fat"
opt-level = 'z'    # 优化代码体积
codegen-units = 1 # 启用单一代码生成单元以提高优化效果
panic = 'abort'    # 发生错误直接崩溃，不回溯堆栈

[profile.bench]
debug = true
